# dsld

Python/: dsldPyConditDisparity.py  dsldPyConfounders.py  dsldPyDensitybyS.py  dsldPyFairML.py  dsldPyFreqPCoord.py  dsldPyFrequencybyS.py  dsldPyHunting.py  dsldPyLogit.py  dsldPyMatching.py  dsldPyScatterPlot3D.py  dsldPyTakeALookAround.py  setup.cfg  working.py
Python/dsld/: Utils.py  __init__.py  dsldPyBnLearn.py  dsldPyConditDisparity.py  dsldPyDensitybyS.py  dsldPyFairML.py  dsldPyHunting.py  dsldPyLinear.py  dsldPyLogit.py  dsldPyML.py  dsldPyQeFairML.py  dsldPyTakeALookAround.py
Python/examples/: graphical.ipynb  machine_learning.ipynb  tabular.ipynb
R/: .Rhistory  dsldConditDisparity.R  dsldConfounders.R  dsldFairML.R  dsldFairUtils.R  dsldFrequencybyS.R  dsldLinear.R  dsldLogit.R  dsldML.R
inst/Python/: README.md
inst/Python/dsld/: dsldPyConfounders.py  dsldPyFairUtils.py  dsldPyFreqPCoord.py  dsldPyFrequencybyS.py  dsldPyLinear.py  dsldPyML.py  dsldPyMatching.py
inst/Python/examples/: graphical.ipynb  machine_learning.ipynb
man/: dsldEDFFair.Rd  dsldFairML.Rd  dsldFairUtils.Rd  dsldLinear.Rd  dsldLogit.Rd  dsldML.Rd
