[metadata]
name = dsld
version = 1.0.0
author = N. Matloff, Aditya Mittal, T. Abdullah, S. Martha, B. Ouattara, B. Zarate
description = This library serves as a Python interface for R's dsld package

[options]
packages = find:
package_dir =
    = .
install_requires =
    pandas
    numpy
    Pillow
    rpy2
    pyreadr
    plotly
    IPython
python_requires = >=3.8

[options.packages.find]
where = .
